feat: basic SEO

--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Penlock.io</title>
+    <meta
+        name="description"
+        content="Penlock is an open-source, cryptographically secure, printable paper-computer. It guides users through secret-splitting their BIP39 seed phrase without an electronic device."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+        property="og:image"
+        content="https://v1.penlock.io/images/background.jpg"
+    />
+    <meta property="og:image:height" content="1280" />
+    <meta property="og:image:width" content="1280" />
+
+    <link rel="alternate" hreflang="en" href="https://penlock.io/en/" />
 
     <link rel="stylesheet" href="../styles/index.css" />
 </head>
