--- a/generate.html
+++ b/generate.html
@@ -4,6 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Generate a Seed Phrase</title>
+    <meta
+        name="description"
+        content="Generate a 12-word seed phrase using real-world, provable randomness."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+        property="og:image"
+        content="https://v1.penlock.io/images/background.jpg"
+    />
+    <meta property="og:image:height" content="1280" />
+    <meta property="og:image:width" content="1280" />
+
+    <link rel="alternate" hreflang="en" href="https://penlock.io/en/generate" />
 
     <link rel="stylesheet" href="../styles/index.css" />
 </head>
