--- a/recover.html
+++ b/recover.html
@@ -4,6 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Recover a Seed Phrase</title>
+    <meta
+        name="description"
+        content="Recover a seed phrase from 2 Penlock shares belonging to the same set. Recover a seed phrase from 2 Penlock shares belonging to the same set. Recover a seed phrase from 2 Penlock shares belonging to the same set."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+        property="og:image"
+        content="https://v1.penlock.io/images/background.jpg"
+    />
+    <meta property="og:image:height" content="1280" />
+    <meta property="og:image:width" content="1280" />
+
+    <link rel="alternate" hreflang="en" href="https://penlock.io/en/recover" />
 
     <link rel="stylesheet" href="../styles/index.css" />
 </head>
