lang: translate the guides (thanks Phil)

--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
     <div class="fullscreen column">
         <div class="logo">penl<strong>o</strong>ck</div>
         <section class="column title">
-            <h1>State-of-the-art seed phrase backup.</h1>
+            <h1>
+                니모닉 시드 구문의 <br />
+                최첨단 백업.
+            </h1>
             <button disabled>
-                <span>Bali Bitcoin Week Pre-Release</span>
+                <span>발리 비트코인 위크에서 사전 공개</span>
                 <span class="green-dot"></span>
             </button>
         </section>
@@ -134,59 +137,59 @@
     </div>
 
     <p>
-        Penlock is an
+        펜락은
         <strong
-            >open-source, cryptographically secure, printable
-            paper-computer.</strong
+            >오픈 소스이고, 암호학적으로 안전하고, 프린트할 수 있는 종이
+            컴퓨터입니다.</strong
         >
-        It guides users through secret-splitting their BIP39 seed phrase without
-        an electronic device.
+        전자 기기를 사용하지 않고도 사용자가 자신의 BIP39 니모닉 시드 구문을
+        비밀 분할할 수 있도록 안내합니다.
     </p>
 </header>
 
 <section class="notes">
     <section class="card">
         <img class="circled" src="../icons/lightbulb.svg" />
-        <h2>Hello Everyone!</h2>
+        <h2>안녕하세요, 여러분!</h2>
         <p>
-            You are browsing the pre-release of Penlock, specially made
-            available for the Bali Bitcoin Week! At that time, the illustrated
-            examples are being worked on. However, I'll be here in the workshops
-            to teach you how to use it, and receive your precious feedback. Have
-            a good week in Bali!
+            여러분은 지금 발리 비트코인 위크를 맞아 특별히 공개된 펜락 사전
+            버전을 보고 계십니다! 현재는 삽화가 들어간 예시들이 작업 중에
+            있습니다. 하지만 제가 워크숍 현장에 있을 테니, 펜락 사용법을
+            알려드리고 여러분의 소중한 피드백도 받을 예정입니다. 발리에서 즐거운
+            한 주 보내세요!
         </p>
     </section>
 </section>
 
 <section>
-    <h2>Getting things done</h2>
+    <h2>한번 해볼까요?</h2>
 
     <section class="card highlight2">
         <header>
             <img src="../icons/phrase.svg" />
-            <h3>Generate a Seed Phrase</h3>
+            <h3>니모닉 구문을 생성하세요</h3>
         </header>
 
         <section class="description">
             <p>
-                Generate a 12-word seed phrase using real-world, provable
-                randomness.
+                검증 가능한 현실의 무작위성을 사용해 12단어 니모닉 구문을
+                생성해요.
             </p>
             <aside>
                 <span>
                     <img src="../icons/clock-white.svg" />
-                    Time required:
+                    소요 시간:
                 </span>
                 <ul>
-                    <li>Learning: ~10 minutes</li>
-                    <li>Execution: ~20 minutes</li>
+                    <li>배우기: 약 10분</li>
+                    <li>해보기: 약 20분</li>
                 </ul>
             </aside>
         </section>
 
         <section class="components">
             <a href="./generate.html">
-                <h4>-> Open the Guide</h4>
+                <h4>-> 가이드 보기</h4>
             </a>
         </section>
     </section>
@@ -194,30 +197,30 @@
     <section class="card highlight1">
         <header>
             <img src="../icons/cut.svg" />
-            <h3>Split a Seed Phrase</h3>
+            <h3>니모닉 구문을 분할하세요</h3>
         </header>
 
         <section class="description">
             <p>
-                Split a seed phrase into 3 (encrypted) shares. Any two of these
-                shares can be used to recover the original seed phrase, but a
-                single compromised share reveals nothing about it.
+                니모닉 구문을 3개의 (암호화된) 조각으로 나눕니다. 두 조각만
+                있어도 원래의 니모닉 구문을 복구할 수 있지만, 하나의
+                조각만으로는 아무 정보도 드러나지 않아요.
             </p>
             <aside>
                 <span>
                     <img src="../icons/clock.svg" />
-                    Time required:
+                    소요 시간:
                 </span>
                 <ul>
-                    <li>Learning: ~30 minutes</li>
-                    <li>Execution: ~60 minutes / 12 words</li>
+                    <li>배우기: 약 30분</li>
+                    <li>해보기: 약 60분 / 12단어 기준</li>
                 </ul>
             </aside>
         </section>
 
         <section class="components">
             <a href="./split.html">
-                <h4>-> Open the Guide</h4>
+                <h4>-> 가이드 보기</h4>
             </a>
         </section>
     </section>
@@ -225,30 +228,29 @@
     <section class="card highlight1">
         <header>
             <img src="../icons/cut.svg" />
-            <h3>Recover a Seed Phrase</h3>
+            <h3>니모닉 구문을 복구하세요</h3>
         </header>
 
         <section class="description">
             <p>
-                Recover a seed phrase from 2 Penlock shares belonging to the
-                same set.
+                같은 세트에 속한 펜락 조각 2개로부터 니모닉 구문을 복구합니다.
             </p>
 
             <aside>
                 <span>
                     <img src="../icons/clock.svg" />
-                    Time required:
+                    소요 시간:
                 </span>
                 <ul>
-                    <li>Learning: ~20 minutes</li>
-                    <li>Execution: ~40 minutes / 12 words</li>
+                    <li>배우기: 약 20분</li>
+                    <li>해보기: 약 40분 / 12단어 기준</li>
                 </ul>
             </aside>
         </section>
 
         <section class="components">
             <a href="./recover.html">
-                <h4>-> Open the Guide</h4>
+                <h4>-> 가이드 보기</h4>
             </a>
         </section>
     </section>
