--- a/generate.html
+++ b/generate.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Generate a Seed Phrase</title>
+    <title>니모닉 구문을 생성하세요</title>
 
     <link rel="stylesheet" href="../styles/index.css" />
 </head>
@@ -23,162 +23,157 @@
 
 <section class="print">
     <section class="sheet column guide">
-        <h2>Generate a Seed Phrase</h2>
+        <h2>니모닉 구문을 생성하세요</h2>
 
         <header>
-            <strong>Learning time:</strong> ~10 minutes             
-            <strong>Execution time:</strong> ~20 minutes
+            <strong>배우기:</strong> 약 10분 <strong>해보기:</strong> 약 20분
         </header>
 
         <section>
-            <h3>Introduction</h3>
+            <h3>소개</h3>
             <p>
-                Producing private, provably secure randomness with an electronic
-                device is extremely challenging due to its black-box nature. A
-                seed phrase generated from unsound randomness is insecure, and a
-                flaw in the random number generation, whether intentional or
-                accidental, can take years to discover.
+                프라이빗하고 검증 가능한 안전한 무작위성을 전자 기기로
+                만들어내는 것은 블랙박스적 특성 때문에 매우 어렵습니다. 불완전한
+                무작위성으로 생성된 니모닉 구문은 안전하지 않으며, 그게
+                의도적이었든 우연적이었든 이 난수 생성의 결함을 발견하는 데에는
+                수년이 걸릴 수 있습니다.
             </p>
 
             <p>
-                Penlock offers a simple and straightforward way to generate a
-                seed phrase by hand, eliminating any doubts about its security.
+                펜락은 니모닉 구문을 손으로 직접 생성할 수 있는 단순하고
+                직관적인 방법을 제공하여, 보안에 대한 모든 의심을 제거합니다.
             </p>
         </section>
 
         <section>
-            <h3>Components</h3>
+            <h3>준비물</h3>
             <p>
-                In addition to printing and cutting the components linked below,
-                you will need a pen, a pencil, an eraser, and the wallet that
-                will store the seed phrase.
+                아래 링크된 문서들을 인쇄하고 잘라내는 것 외에도, 펜, 연필,
+                지우개, 그리고 니모닉 구문을 저장할 지갑이 필요합니다.
             </p>
 
             <dd>
-                <a href="./worksheet-12.pdf" target="_blank">Worksheet-12.pdf</a
+                <a href="./worksheet-12.pdf" target="_blank"
+                    >12단어 워크시트.pdf</a
                 >,
-                <a href="./worksheet-18.pdf" target="_blank">Worksheet-18.pdf</a
+                <a href="./worksheet-18.pdf" target="_blank"
+                    >18단어 워크시트.pdf</a
                 >,
                 <a href="./worksheet-24.pdf" target="_blank"
-                    >Worksheet-24.pdf</a
+                    >24단어 워크시트.pdf</a
                 >
-                (double-sided)
+                (양면 인쇄)
             </dd>
             <dt>
                 <p>
-                    This worksheet can be used to generate, split, and recover a
-                    seed phrase. However, if you do not intend to split your
-                    seed phrase with Penlock, we recommend using the 12-word
-                    recovery card provided by your wallet instead.
+                    이 워크시트는 니모닉 구문을 생성, 분할, 복구하는 데 사용할
+                    수 있습니다. 그러나 펜락으로 니모닉 구문을 분할할 계획이
+                    없다면 지갑에서 제공하는 12단어 백업 카드를 대신 사용할 것을
+                    권장합니다.
                 </p>
             </dt>
 
             <dd>
-                <a href="./wordlist.pdf" target="_blank">Wordlist.pdf</a>
+                <a href="./wordlist.pdf" target="_blank"
+                    >니모닉 단어 목록.pdf</a
+                >
             </dd>
             <dt>
                 <p>
-                    This file contains the standard wordlist used by most
-                    wallets. Each word has been prefixed with a 2-character
-                    checksum (the grayed characters).
+                    이 파일에는 대부분 지갑에서 사용하는 표준 니모닉 단어 목록이
+                    들어 있습니다. 각 단어에는 2자리 체크섬(회색 칸 안의 문자)이
+                    앞에 붙어 있습니다.
                 </p>
                 <aside>
-                    <em>Security:</em> We recommend using a paper version that
-                    you have printed yourself from this website.
+                    <em>보안:</em> 이 웹사이트에서 직접 인쇄한 종이 버전을
+                    사용하는 것을 권장합니다.
                 </aside>
             </dt>
 
             <dd>
-                <a href="./tiles.pdf" target="_blank">Tiles.pdf</a>
-                (double-sided)
+                <a href="./tiles.pdf" target="_blank">제비뽑기.pdf</a>
+                (양면 인쇄)
             </dd>
             <dt>
                 <p>
-                    These tiles are used to generate random numbers. After
-                    printing and cutting, ensure the value on the tiles is
-                    identical on both sides. A detailed check of every tile is
-                    not required; if the document was misprinted, none of the
-                    tiles will be correct.
+                    이 제비들은 무작위적인 수를 생성하는 데 사용됩니다. 인쇄하고
+                    잘라낸 후에는 제비의 양면 숫자가 동일한지 확인해야 합니다.
+                    모든 제비를 꼼꼼히 확인할 필요는 없는데, 왜냐하면 문서가
+                    잘못 인쇄되면 어떤 제비도 올바르지 않을 것이기 때문입니다.
                 </p>
 
                 <aside>
-                    <em>Fraudproof:</em>
-                    (If received from a third party) A complete set must include
-                    two series of 32 tiles numbered from 1 to 32. The first
-                    series is suffixed with a white dot (◦), the second with a
-                    black dot (•). The value must be identical on both sides of
-                    every tile.
+                    <em>위조 방지:</em>
+                    (제3자에게서 받은 경우) 완전한 제비뽑기 세트는 1번부터
+                    32번까지 번호가 매겨진 제비 두 세트가 포함되어 있습니다. 첫
+                    번째 세트는 흰 점(◦)이 뒤에 붙어 있고, 두 번째 세트는 검은
+                    점(●)이 뒤에 붙어 있습니다. 모든 제비의 양면 숫자는 동일해야
+                    합니다.
                 </aside>
             </dt>
         </section>
 
         <section>
-            <h3>Procedure</h3>
+            <h3>절차</h3>
 
-            <h4>Doing This Well</h4>
+            <h4>주의 사항</h4>
             <ul>
-                <li>Prefer a private space where you won't be disturbed</li>
-                <li>Keep cameras and prying eyes away</li>
-                <li>Avoid pronouncing the results out loud</li>
+                <li>방해받지 않을 아주 사적인 공간에서 진행하세요.</li>
+                <li>주변에 카메라나 엿보는 시선이 없는지 확인하세요.</li>
+                <li>결과를 소리내어 말하지 마세요.</li>
             </ul>
 
-            <h4>A. Generate the 11 first words</h4>
+            <h4>A. 첫 11개 단어 생성하기</h4>
             <p>
-                The first 11 words of a seed phrase are fully random and can be
-                generated without further processing. Each tile has a number and
-                a dot, and each word is tied to a number-number-dot combination.
-                Then:
+                시드 구문의 첫 11개 단어는 완전히 무작위적이며 추가적인 절차
+                없이 만들 수 있습니다. 각 제비에는 숫자와 점이 있으며, 각 단어는
+                숫자-숫자-점 조합에 연결되어 있습니다. 다음 단계를 따르세요:
             </p>
             <ol>
-                <li>Shuffle the tiles thoroughly and pick up a random tile.</li>
+                <li>제비를 충분히 섞고 무작위로 하나를 뽑으세요.</li>
                 <li>
-                    On the wordlist, identify the column that starts with the
-                    number on the tile (we ignore the dot for now).
+                    니모닉 단어 목록에서, 해당 제비의 숫자로 시작하는 열을
+                    확인하세요. (지금 단계에서 점은 무시하세요.)
                 </li>
                 <li>
-                    Put the tile back, shuffle, and pick up a random tile again.
+                    제비를 다시 넣고 섞은 뒤, 다시 무작위로 하나를 뽑습니다.
                 </li>
                 <li>
-                    In the column you previously identified, find the word that
-                    matches the number+dot combination on the tile.
+                    이전에 확인한 열에서, 뽑은 제비의 숫자+점 조합에 해당하는
+                    단어를 찾습니다.
                 </li>
                 <li>
-                    On the worksheet, write down the first 6 characters under
-                    the 'Seedphrase' section, respecting the gray & white
-                    backgrounds coding.
+                    워크시트의 ‘니모닉 구문’ 부분에 그 단어의 앞 6자를 회색과
+                    흰색 배경을 맞춰서 적습니다.
                 </li>
-                <li>Repeat steps 1 to 5 until you have generated 11 words.</li>
+                <li>1~5 단계를 반복해서 총 11개의 단어를 생성합니다.</li>
             </ol>
 
-            <h4>B. Generate the 12th word</h4>
+            <h4>B. 12번째 단어 생성하기</h4>
             <p>
-                The last word is partly random but also contains a checksum that
-                depends on the previous words. We are going to select a random
-                group of 16 candidate words, out of which only one can be
-                accepted by the wallet. On the wordlist, these groups are
-                delimited by black horizontal separators.
+                마지막 단어는 부분적으로 무작위적이며, 앞선 단어들에 따라
+                정해지는 체크섬 정보가 포함되어 있습니다. 무작위로 선택한 16개의
+                후보 단어 중 단 하나만 지갑에서 유효하게 받아들여집니다. 니모닉
+                단어 목록에서는 검은색 가로 구분선으로 이 16개 단어들의 그룹이
+                구분되어 있습니다.
             </p>
             <ol>
+                <li>앞서 설명한 방법대로 무작위 단어를 하나 생성합니다.</li>
                 <li>
-                    Use the tiles to generate a random word, as previously
-                    described.
+                    니모닉 단어 목록에서 해당 단어가 속한 16개 단어 그룹을
+                    확인합니다.
                 </li>
                 <li>
-                    On the wordlist, identify the 16-word group that this word
-                    is part of.
+                    지갑에서 복구 과정을 시작하고, 앞의 11개 단어를
+                    입력합니다(체크섬인 회색 칸의 문자와 대시(-)는 제외합니다).
                 </li>
                 <li>
-                    On the wallet, initialize the recovery process and enter the
-                    first 11 words, without the grayed characters (checksum),
-                    and without the dashes (-).
+                    12번째 단어 자리에 후보 단어 16개를 하나씩 시도해보면, 그 중
+                    하나만이 지갑에서 유효하게 받아들여집니다.
                 </li>
                 <li>
-                    For the 12th word, try each of the 16 candidate words until
-                    one is accepted.
-                </li>
-                <li>
-                    On the worksheet, write down the valid 12th word under the
-                    'Seedphrase' section.
+                    워크시트의 ‘니모닉 구문’ 부분에 이 유효한 12번째 단어를
+                    적습니다.
                 </li>
             </ol>
         </section>
