--- a/recover.html
+++ b/recover.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Recover a Seed Phrase</title>
+    <title>니모닉 구문을 복구하세요</title>
 
     <link rel="stylesheet" href="../styles/index.css" />
 </head>
@@ -35,249 +35,246 @@
 
 <section class="print">
     <section class="sheet column guide">
-        <h2>Recover a Seed Phrase</h2>
+        <h2>니모닉 구문을 복구하세요</h2>
 
         <header>
-            <strong>Learning time:</strong> ~20 minutes             
-            <strong>Execution time:</strong> ~40 minutes / 12 words
+            <strong>배우기:</strong> 약 20분 <strong>해보기:</strong> 약 40분 /
+            12단어 기준
         </header>
 
         <section>
-            <h3>Components</h3>
+            <h3>준비물</h3>
             <p>
-                In addition to printing and assembling the components linked
-                below, you will need a pencil, an eraser, and two Penlock shares
-                that belong to the same set.
+                아래에 링크된 문서를 인쇄하고 조립하는 것 외에도, 연필, 지우개,
+                그리고 같은 세트에 속해 있는 펜락 조각 두 개가 필요해요.
             </p>
 
             <dd>
-                <a href="./worksheet-12.pdf" target="_blank">Worksheet-12.pdf</a
+                <a href="./worksheet-12.pdf" target="_blank"
+                    >12단어 워크시트.pdf</a
                 >,
-                <a href="./worksheet-18.pdf" target="_blank">Worksheet-18.pdf</a
+                <a href="./worksheet-18.pdf" target="_blank"
+                    >18단어 워크시트.pdf</a
                 >,
                 <a href="./worksheet-24.pdf" target="_blank"
-                    >Worksheet-24.pdf</a
+                    >24단어 워크시트.pdf</a
                 >
-                (first page only)
+                (첫 페이지만 사용)
             </dd>
             <dt>
                 <p>
-                    The worksheet is used to write the seed phrase during the
-                    recovery process. Other sections (shares) are left unused.
-                    Note that each word is made of 2 gray boxes
-                    (Penlock-specific checksum), and 4 white boxes (truncated
-                    seed word).
+                    워크시트는 복구 과정에서 니모닉 구문을 기록하는 데
+                    사용됩니다. ‘니모닉 구문’ 표만 사용하고, ‘조각’ 표 부분은
+                    사용하지 않습니다. 각 단어는 2개의 회색 칸(펜락 전용
+                    체크섬)과 4개의 흰색 칸(니모닉 단어의 첫 4글자)으로 구성되어
+                    있다는 점에 유의하세요.
                 </p>
             </dt>
 
             <dd>
-                <a href="./wheel.pdf" target="_blank">Wheel.pdf</a>
-                (single-sided; thick paper is better)
+                <a href="./wheel.pdf" target="_blank">회전판.pdf</a>
+                (단면 인쇄, 두꺼운 종이 권장)
             </dd>
             <dt>
                 <p>
-                    The wheel is the primary tool for recovering the seed
-                    phrase. To assemble it, proceed with the following steps:
+                    회전판은 니모닉 구문을 복구하는 핵심 도구입니다. 조립 단계는
+                    다음과 같습니다.
                 </p>
 
                 <ol>
-                    <li>Print and carefully cut out both disks.</li>
+                    <li>두 개의 원판을 인쇄하고, 조심스럽게 잘라냅니다.</li>
                     <li>
-                        On the colored disk, cut out the pointer window. The
-                        smaller numbered windows are not needed for this
-                        recovery process.
+                        색이 있는 원판에서는 상단 화살표 아래의 네모를
+                        잘라냅니다. (작은 숫자 옆의 네모는 이번 복구 과정에서는
+                        필요 없습니다.)
                     </li>
                     <li>
-                        Attach both disks together at their center using a snap
-                        button, a brass fastener, or a pin. Ensure the colored
-                        wheel is placed on top and can rotate freely.
+                        두 원판을 스냅 단추(똑딱이 단추), 할핀, 핀 등을 사용해
+                        가운데에 고정합니다. 색 있는 원판이 위에 오도록 하고,
+                        회전이 잘 되어야 합니다.
                     </li>
                 </ol>
                 <p>
-                    The wheel has 4 distinct sections that will be referred to
-                    as follows: the pointer, the outer (character) ring, the
-                    inner (character) ring, and the numbered spiral.
+                    회전판에는 4개의 구역이 있는데, 각각 상단 화살표, 바깥쪽
+                    링(문자), 안쪽 링(문자), 번호가 매겨진 나선으로 지칭합니다.
                 </p>
 
                 <aside>
-                    <em>Fraudproof:</em>
-                    (If received from a third party) The characters on the outer
-                    ring must be, in clockwise order: A to Z, -, =, #. When the
-                    pointer is on '=', each character on the inner ring must be
-                    aligned with and identical to the outer ring ones.
+                    <em>위조 방지:</em>
+                    (제3자에게서 받은 경우) 바깥 링의 문자는 시계 방향으로 A부터
+                    Z, -, =, # 이어야 합니다. 화살표가 '='에 있을 때, 안쪽 링의
+                    각 문자는 바깥 링의 문자들과 일치해야 합니다.
                 </aside>
             </dt>
 
             <dd>
-                <a href="./sumtable.pdf" target="_blank">Sumtable.pdf</a>
+                <a href="./sumtable.pdf" target="_blank">체크섬 표.pdf</a>
             </dd>
             <dt>
                 <p>
-                    The sumtable is used to verify the recovery is error-free,
-                    to correct any errors, and to complete the recovered words.
+                    체크섬 표는 복구가 오류 없이 이뤄졌는지 확인하고, 오류를
+                    수정하며, 복구된 단어를 완성하는 데 사용됩니다.
                 </p>
                 <aside>
-                    <em>Security:</em> We recommend using a paper version that
-                    you have printed yourself from this website.
+                    <em>보안:</em> 이 웹사이트에서 직접 인쇄한 종이 버전을
+                    사용하는 것을 권장합니다.
                 </aside>
             </dt>
 
             <dd>
-                <a href="./wordlist.pdf" target="_blank">Wordlist.pdf</a>
-                (situational)
+                <a href="./wordlist.pdf" target="_blank"
+                    >니모닉 단어 목록.pdf</a
+                >
+                (상황에 따라 필요)
             </dd>
             <dt>
                 <p>
-                    The wordlist might be needed to correct a specific type of
-                    error. You can delay printing it until necessary.
+                    특정 유형의 오류를 수정할 때 니모닉 단어 목록이 필요할 수
+                    있습니다. 필요할 때 인쇄해도 됩니다.
                 </p>
                 <aside>
-                    <em>Security:</em> We recommend using a paper version that
-                    you have printed yourself from this website.
+                    <em>보안:</em> 이 웹사이트에서 직접 인쇄한 종이 버전을
+                    사용하는 것을 권장합니다.
                 </aside>
             </dt>
         </section>
 
         <section>
-            <h3>Procedure</h3>
+            <h3>절차</h3>
 
-            <h4>Doing This Well</h4>
+            <h4>주의 사항</h4>
             <ul>
-                <li>Prefer a private space where you won't be disturbed</li>
-                <li>Keep cameras and prying eyes away</li>
-                <li>Avoid pronouncing the results out loud</li>
+                <li>방해받지 않을 아주 사적인 공간에서 진행하세요.</li>
+                <li>주변에 카메라나 엿보는 시선이 없는지 확인하세요.</li>
+                <li>결과를 소리내어 말하지 마세요.</li>
             </ul>
 
-            <h4>A. Identify the Recovery Window and Share Position</h4>
+            <h4>A. 몇 번째 조각들의 조합으로 복구할 것인지 확인하기</h4>
             <p>
-                The recovery window you need to use depends on which shares you
-                are recovering from:
+                사용할 복구 네모 칸은 몇 번째 조각들을 이용하는지에 따라
+                달라집니다.
             </p>
 
             <div class="card">
                 <table>
                     <thead>
-                        <th>Inner Share</th>
+                        <th>안쪽 조각</th>
                         <th></th>
-                        <th>Outer Share</th>
+                        <th>바깥쪽 조각</th>
                         <th></th>
-                        <th>Recovery Window</th>
+                        <th>복구할 네모 칸</th>
                     </thead>
 
                     <tbody>
                         <tr>
-                            <td>Share 1</td>
+                            <td>조각 1</td>
                             <td>+</td>
-                            <td>Share 2</td>
+                            <td>조각 2</td>
                             <td>→</td>
-                            <td>Pointer (▼)</td>
+                            <td>상단 화살표 (▼)</td>
                         </tr>
                         <tr>
-                            <td>Share 2</td>
+                            <td>조각 2</td>
                             <td>+</td>
-                            <td>Share 3</td>
+                            <td>조각 3</td>
                             <td>→</td>
-                            <td>Pointer (▼)</td>
+                            <td>상단 화살표 (▼)</td>
                         </tr>
                         <tr>
-                            <td>Share 1</td>
+                            <td>조각 1</td>
                             <td>+</td>
-                            <td>Share 3</td>
+                            <td>조각 3</td>
                             <td>→</td>
-                            <td>Window 29→</td>
+                            <td>29번 → 네모</td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <ol>
                 <li>
-                    Using the table above, identify the correct recovery window
-                    for your shares.
+                    위의 표를 보고, 자신이 이용할 조각 조합에 맞는 복구 네모
+                    칸을 확인합니다.
                 </li>
                 <li>
-                    Note which share is the inner share and which is the outer
-                    share.
-                </li>
-            </ol>
-
-            <h4>B. Recover the Seed Phrase</h4>
-            <p>
-                The seed phrase is recovered character by character,
-                sequentially. Proceed as follows:
-            </p>
-            <ol>
-                <li>Read the first character of the inner share.</li>
-                <li>On the wheel, locate this character on the inner ring.</li>
-                <li>Read the first character of the outer share.</li>
-                <li>On the wheel, locate this character on the outer ring.</li>
-                <li>Rotate the wheel to align both characters.</li>
-                <li>Read the resulting character from the recovery window.</li>
-                <li>
-                    On the worksheet, write this character as the first
-                    character in the 'Seedphrase' section.
-                </li>
-                <li>
-                    Repeat steps 1 to 7 for each subsequent character until all
-                    the words are recovered.
+                    어느 조각이 안쪽 조각인지, 바깥쪽 조각인지를 기록합니다.
                 </li>
             </ol>
 
-            <h4>C. Check & Fix the Words</h4>
+            <h4>B. 니모닉 구문 복구하기</h4>
             <p>
-                Look up each of the 12 words in the sumtable. If you find a
-                match, the word is correct. You can then take note of the full
-                word when they are longer than 4 characters.
+                니모닉 구문은 글자 하나씩 순차적으로 복구합니다. 절차는 다음과
+                같습니다:
+            </p>
+            <ol>
+                <li>안쪽 조각에서 첫 글자를 확인합니다.</li>
+                <li>회전판 안쪽 링에서 이 문자를 찾습니다..</li>
+                <li>바깥쪽 조각에서 첫 글자를 확인합니다.</li>
+                <li>회전판 바깥쪽 링에서 이 문자를 찾습니다.</li>
+                <li>회전판을 돌려 두 문자가 서로 매칭되도록 맞춥니다.</li>
+                <li>
+                    복구 네모 칸(화살표 또는 29번 옆 네모)에 나온 문자를
+                    확인합니다.
+                </li>
+                <li>
+                    워크시트의 ‘니모닉 구문’ 부분에 이 문자를 첫 글자로
+                    적습니다.
+                </li>
+                <li>모든 단어를 복구할 때까지 1~7단계를 반복합니다.</li>
+            </ol>
+
+            <h4>C. 니모닉 단어 확인 및 수정하기</h4>
+            <p>
+                12개 단어 각각을 '체크섬 표'에서 찾아봅니다. 일치하는 단어가
+                있다면 올바른 단어입니다. 단어가 4글자보다 길 경우 전체 단어를
+                기록할 수도 있습니다.
             </p>
             <p>
-                If a word does not match, an error has occurred — either during
-                recovery or when the share was produced or copied. Follow these
-                steps until you identify the correct word:
+                일치하지 않는 단어가 있다면 오류가 발생한 것입니다. 이 오류는
+                복구 과정에서 생겼을 수도 있고, 조각이 생성되거나 옮겨 적는
+                과정에서 생겼을 수도 있습니다. 올바른 단어를 찾을 때까지 다음
+                절차를 따르세요:
             </p>
             <ol>
                 <li>
-                    Repeat the recovery process from Section B for that specific
-                    word. Pay close attention to characters that are easily
-                    confused, such as E/F, O/Q, U/V, or X/Y. This may produce a
-                    correct result.
+                    해당 단어에 대해 절차 B를 다시 수행합니다. E/F, O/Q, U/V,
+                    X/Y처럼 혼동하기 쉬운 문자에 특히 주의하세요. 이렇게 하면
+                    올바른 결과가 나올 수 있습니다.
                 </li>
                 <li>
-                    If not, among words in the sumtable that start with the
-                    <em>same two grayed checksum characters</em>, look for a
-                    word that is similar but has one or two different
-                    characters. This word is most likely the correct one.
+                    만약 그렇지 않다면, 체크섬 표에서 같은 두 개의 회색 체크섬
+                    문자로 시작하는 단어들 중, 한두 글자만 다른 유사한 단어를
+                    찾습니다. 이 단어가 올바른 단어일 가능성이 높습니다.
                 </li>
                 <li>
-                    If no match is found in the sumtable, use the wordlist to
-                    find a word that matches the <em>white characters</em> but
-                    has one or two errors in the grayed checksum characters.
-                    This word is most likely the correct one.
+                    체크섬 표에서 일치하는 단어가 없으면, 니모닉 단어 목록을
+                    사용해 흰색 문자와 일치하지만 회색 체크섬 문자에서 한두 글자
+                    오류가 있는 단어를 찾습니다. 이 단어가 올바른 단어일
+                    가능성이 높습니다.
                 </li>
             </ol>
         </section>
 
         <section>
-            <h3>Notes on Initializing a Wallet</h3>
+            <h3>복구된 니모닉을 지갑에 입력할 때 유의사항</h3>
             <p>
-                A few important notes on initializing a wallet from the
-                recovered seed phrase:
+                복구된 니모닉을 지갑에 입력할 때 몇 가지 중요한 사항이 있습니다:
             </p>
             <ul>
                 <li>
-                    Consult your wallet's documentation for specific
-                    instructions on recovering from a seed phrase.
+                    지갑에 니모닉을 입력해 복구하는 구체적인 방법은 각 지갑의
+                    문서를 참고하세요.
                 </li>
                 <li>
-                    Enter only the white characters: the grayed checksum
-                    characters are Penlock-specific.
+                    흰색 칸의 문자만 입력해야 합니다. 회색 체크섬 문자는 펜락
+                    전용입니다.
                 </li>
                 <li>
-                    Omit the dashes: they represent an empty character for
-                    3-letter words.
+                    대시(-)는 생략합니다: 대시(-)는 3글자 단어에서 빈칸을
+                    나타냅니다.
                 </li>
                 <li>
-                    Hardware wallets typically only require the first 4 letters
-                    of each word, while software wallets often require the full
-                    word.
+                    하드웨어 지갑은 보통 각 단어의 처음 4글자만 필요로 하지만,
+                    소프트웨어 지갑은 전체 단어를 요구하기도 합니다.
                 </li>
             </ul>
         </section>
