lang: index Korean translation

--- a/recover.html
+++ b/recover.html
@@ -17,6 +17,7 @@
     <meta property="og:image:width" content="1280" />
 
     <link rel="alternate" hreflang="en" href="https://penlock.io/en/recover" />
+    <link rel="alternate" hreflang="ko" href="https://penlock.io/ko/recover" />
 
     <link rel="stylesheet" href="../styles/index.css" />
 </head>
