--- a/generate.html
+++ b/generate.html
@@ -17,6 +17,7 @@
     <meta property="og:image:width" content="1280" />
 
     <link rel="alternate" hreflang="en" href="https://penlock.io/en/generate" />
+    <link rel="alternate" hreflang="ko" href="https://penlock.io/ko/generate" />
 
     <link rel="stylesheet" href="../styles/index.css" />
 </head>
