lang: translate donation card (thanks Phil)

--- a/split.html
+++ b/split.html
@@ -369,7 +369,7 @@
 </section>
 
 <penlock-donate
-    invite="Penlock is a peer-funded project!"
-    message="You can help us grow and provide value to the community by making a donation. Thank you very much!"
+    invite="펜락은 후원으로 운영되는 프로젝트입니다!"
+    message="우리가 성장하고 커뮤니티에 더 많은 가치를 제공할 수 있도록 후원으로 도와주세요. 진심으로 감사합니다!"
 ></penlock-donate>
 <penlock-footer></penlock-footer>
